--- a/vscode/Dockerfile
+++ b/vscode/Dockerfile
@@ -1,2 +1,3 @@
-FROM linuxserver/code-server
-cd add && tar -C /usr/local -xzf go1.15.7.linux-amd64.tar.gz && export PATH=$PATH:/usr/local/go/bin
+FROM linuxserver/code-server as builder
+
+RUN cd add && tar -C /usr/local -xzf go1.15.7.linux-amd64.tar.gz && export PATH=$PATH:/usr/local/go/bin
